--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Pricing Card</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
-    <link href="./style.css" rel"stylesheet">
+    <link href="./style.css" rel="stylesheet">
   </head>
   <body>
      <div id = "card">
